--- a/seller.html
+++ b/seller.html
@@ -12,9 +12,11 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.js"></script>
     <style>
       button, input, select, textarea { font-size: 16px; }
-      .badge { padding: 2px 8px; border-radius: 999px; font-size: 12px; border:1px solid #e5e7eb }
+      .pill { border:1px solid #e5e7eb; border-radius:999px; padding:6px 12px; }
+      .pill-danger { background:#fee2e2; color:#991b1b; border-color:#fecaca; }
+      .pill-muted { background:#ffffff; color:#111827; }
+      .badge { padding:2px 8px; border-radius:999px; font-size:12px; border:1px solid #e5e7eb }
       .badge-warn { background:#fef3c7; color:#92400e; border-color:#fde68a }
-      .badge-danger { background:#fee2e2; color:#991b1b; border-color:#fecaca }
       .badge-ok { background:#dcfce7; color:#166534; border-color:#bbf7d0 }
     </style>
   </head>
@@ -31,6 +33,11 @@
 
       const supa = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
+      // Friendly label for buyer if we set name = id
+      function labelFromId(id){
+        return id.replace(/_/g," ").replace(/\b\w/g, c=>c.toUpperCase());
+      }
+
       function App(){
         // Auth
         const [session, setSession] = useState(null);
@@ -39,7 +46,7 @@
         const [authErr, setAuthErr] = useState("");
 
         // Data
-        const [status, setStatus] = useState({ lake:"", is_open:false, left_lake:false });
+        const [status, setStatus] = useState({ lake:"", is_open:false }); // simplified (no left_lake)
         const [categories, setCategories] = useState([]);
         const [orders, setOrders] = useState([]);
         const [lowStockThreshold, setLowStockThreshold] = useState(10);
@@ -59,7 +66,10 @@
 
             supa.channel("status-"+SELLER_ID)
               .on("postgres_changes",{event:"*",schema:"public",table:"seller_status",filter:`seller_id=eq.${SELLER_ID}`},
-                payload => setStatus(payload.new || payload.old || {}))
+                payload => {
+                  const st = payload.new || payload.old || {};
+                  setStatus({ lake: st.lake, is_open: !!st.is_open }); // ignore left_lake if present
+                })
               .subscribe();
 
             supa.channel("cats-"+SELLER_ID)
@@ -86,11 +96,19 @@
         // Loaders
         async function loadStatus(){
           const { data } = await supa.from("seller_status").select("*").eq("seller_id", SELLER_ID).maybeSingle();
-          if (data) setStatus({ lake: data.lake, is_open: !!data.is_open, left_lake: !!data.left_lake });
+          if (data) setStatus({ lake: data.lake, is_open: !!data.is_open });
         }
         async function loadCategories(){
-          const { data } = await supa.from("categories").select("*").eq("seller_id", SELLER_ID).order("name");
-          setCategories(data || []);
+          const { data } = await supa.from("categories").select("*").eq("seller_id", SELLER_ID);
+          const list = (data || []);
+          // custom order: small, placeholder, medium, large, goldfish, rest (alpha)
+          const orderMap = { small: 1, placeholder: 2, medium:3, large:4, goldfish:5 };
+          list.sort((a,b)=>{
+            const sa = orderMap[a.id] || 100 + a.id.localeCompare(b.id);
+            const sb = orderMap[b.id] || 100 + b.id.localeCompare(a.id);
+            return sa - sb;
+          });
+          setCategories(list);
         }
         async function loadOrders(){
           const { data } = await supa.from("orders").select("*").eq("seller_id", SELLER_ID).order("created_at", { ascending:false });
@@ -99,21 +117,21 @@
 
         // Saves
         async function saveStatus(patch={}){
-          const body = { seller_id: SELLER_ID, ...status, ...patch };
+          const body = { seller_id: SELLER_ID, ...status, ...patch, left_lake: false }; // always false for simplicity
           const { error } = await supa.from("seller_status").upsert(body).eq("seller_id", SELLER_ID);
           if (error) alert("Status update failed: " + error.message);
         }
 
+        // Only ID kept in UI. We still write name = ID so buyer sees a nice label.
         async function saveCategory(cat){
           const payload = {
             id: cat.id.trim(),
             seller_id: SELLER_ID,
-            name: cat.name.trim(),
+            name: labelFromId(cat.id.trim()), // keep name synced for buyer UI
             unit: "each",
             price: Number(cat.price||0),
             description: cat.description||"",
             disabled: !!cat.disabled,
-            // optional stock column (if you added it)
             stock: cat.stock !== undefined && cat.stock !== null ? Number(cat.stock) : null
           };
           const { error } = await supa.from("categories").upsert(payload);
@@ -121,11 +139,9 @@
         }
 
         async function addCategory(){
-          const id = prompt("New category ID (e.g., smelt, shinerXL):");
+          const id = prompt("New category ID (e.g., smallplus, shiner_xl):");
           if (!id) return;
-          const name = prompt("Display name:");
-          if (!name) return;
-          await saveCategory({ id, name, price: 0, description: "", disabled: false, stock: 0 });
+          await saveCategory({ id, price: 0, description: "", disabled: false, stock: 0 });
           await loadCategories();
         }
 
@@ -135,7 +151,6 @@
           const price = Math.round(0.75 * 5 * baseSum * 100) / 100;
           await saveCategory({
             id: "daily_deal",
-            name: "Daily Deal (5 of each)",
             price,
             description: "Bundle: 5 Small + 5 Medium + 5 Large + 5 Goldfish at 3/4 price.",
             disabled: false
@@ -144,15 +159,14 @@
           alert("Daily Deal updated to $" + price.toFixed(2));
         }
 
-        // NEW: Sold out all (disable all + close)
         async function soldOutAll(){
-          if (!confirm("Disable all categories and close orders (Left the lake = Yes)?")) return;
+          if (!confirm("Mark every category Out of stock and set status Closed?")) return;
           const { error } = await supa.from("categories").update({ disabled:true }).eq("seller_id", SELLER_ID);
           if (error) { alert("Failed to disable categories: " + error.message); return; }
-          await saveStatus({ is_open:false, left_lake:true });
+          await saveStatus({ is_open:false });
           await loadCategories();
           await loadStatus();
-          alert("All categories disabled and status set to Closed / Left the lake.");
+          alert("All items set to Out of stock and status set to Closed.");
         }
 
         // Orders
@@ -161,7 +175,7 @@
           if (error) alert("Update failed: " + error.message);
         }
 
-        // NEW: Export CSV (one row per item)
+        // CSV export
         function exportOrdersCSV(){
           const headers = ["order_id","buyer_name","lake","status","created_at","lat","lng","category_id","qty","notes"];
           const rows = [];
@@ -190,7 +204,6 @@
         }
 
         const lowStockCats = useMemo(()=>{
-          // low if stock is a number and <= threshold and not disabled
           return categories.filter(c=>{
             const s = Number(c.stock);
             return !isNaN(s) && s >= 0 && s <= Number(lowStockThreshold) && !c.disabled;
@@ -228,7 +241,7 @@
                 )
               ),
 
-              // Status
+              // Location & Status (Open/Closed only)
               React.createElement("div",{className:"bg-white rounded-2xl p-5 shadow"},
                 React.createElement("h2",{className:"text-lg font-semibold mb-3"},"Location & Status"),
                 React.createElement("div",{className:"grid sm:grid-cols-4 gap-3"},
@@ -238,41 +251,32 @@
                       LAKES.map(L=> React.createElement("option",{key:L,value:L},L))
                     )
                   ),
-                  React.createElement("div",null,
-                    React.createElement("label",{className:"text-sm text-slate-600"},"Open for orders"),
-                    React.createElement("select",{className:"w-full border rounded-xl px-3 py-2 mt-1", value:String(status.is_open), onChange:e=>setStatus(s=>({...s, is_open: e.target.value==="true"}))},
-                      React.createElement("option",{value:"true"},"Open"),
-                      React.createElement("option",{value:"false"},"Closed")
-                    )
-                  ),
-                  React.createElement("div",null,
-                    React.createElement("label",{className:"text-sm text-slate-600"},"Left the lake"),
-                    React.createElement("select",{className:"w-full border rounded-xl px-3 py-2 mt-1", value:String(status.left_lake), onChange:e=>setStatus(s=>({...s, left_lake: e.target.value==="true"}))},
-                      React.createElement("option",{value:"false"},"No"),
-                      React.createElement("option",{value:"true"},"Yes")
-                    )
+                  React.createElement("div",{className:"sm:col-span-1 flex items-end"},
+                    React.createElement("button",{
+                      className:"w-full pill " + (status.is_open ? "pill-ok" : "pill-muted"),
+                      onClick:()=> setStatus(s=>({...s, is_open: !s.is_open}))
+                    }, status.is_open ? "Open" : "Closed")
                   ),
                   React.createElement("div",null,
                     React.createElement("label",{className:"text-sm text-slate-600"},"Low-stock threshold"),
                     React.createElement("input",{type:"number", min:"0", className:"w-full border rounded-xl px-3 py-2 mt-1", value:lowStockThreshold, onChange:e=>setLowStockThreshold(e.target.value)})
+                  ),
+                  React.createElement("div",{className:"sm:col-span-1 flex items-end justify-end gap-2"},
+                    React.createElement("button",{className:"px-4 py-2 rounded-xl bg-white border", onClick:()=>loadStatus()},"Reset"),
+                    React.createElement("button",{className:"px-4 py-2 rounded-xl bg-slate-900 text-white", onClick:()=>saveStatus({})},"Save Status")
                   )
                 ),
-                React.createElement("div",{className:"mt-3 flex justify-end gap-2"},
-                  React.createElement("button",{className:"px-4 py-2 rounded-xl bg-white border", onClick:()=>loadStatus()},"Reset"),
-                  React.createElement("button",{className:"px-4 py-2 rounded-xl bg-slate-900 text-white", onClick:()=>saveStatus({})},"Save Status")
-                ),
-                // Low-stock banner
                 React.createElement("div",{className:"mt-4"},
                   lowStockCats.length>0
                     ? React.createElement("div",{className:"p-3 rounded-xl border bg-amber-50 text-amber-900"},
-                        `${lowStockCats.length} item(s) at or below ${lowStockThreshold}: ` +
-                        lowStockCats.map(c=> c.name + (c.stock!=null?` (${c.stock})`:"")).join(", ")
+                        `${lowStockCats.length} low-stock: ` +
+                        lowStockCats.map(c=> c.id + (c.stock!=null?` (${c.stock})`:"")).join(", ")
                       )
-                    : React.createElement("div",{className:"p-3 rounded-xl border bg-emerald-50 text-emerald-900"},"All good — no low stock right now.")
+                    : React.createElement("div",{className:"p-3 rounded-xl border bg-emerald-50 text-emerald-900"},"All good — no low stock.")
                 )
               ),
 
-              // Categories
+              // Categories (ID-only + Out of stock pill)
               React.createElement("div",{className:"bg-white rounded-2xl p-5 shadow"},
                 React.createElement("div",{className:"flex items-center justify-between mb-3"},
                   React.createElement("h2",{className:"text-lg font-semibold"},"Categories"),
@@ -285,14 +289,10 @@
                   ? React.createElement("div",{className:"text-sm text-slate-500"},"No categories yet.")
                   : React.createElement("div",{className:"grid gap-3"},
                       categories.map(c=> React.createElement("div",{key:c.id, className:"border rounded-2xl p-3"},
-                        React.createElement("div",{className:"grid sm:grid-cols-7 gap-2 items-center"},
+                        React.createElement("div",{className:"grid sm:grid-cols-6 gap-2 items-center"},
                           React.createElement("div",{className:"sm:col-span-2"},
                             React.createElement("div",{className:"text-xs text-slate-500"},"ID"),
                             React.createElement("input",{className:"w-full border rounded-lg px-3 py-2", value:c.id, onChange:e=>setCategories(prev=>prev.map(x=> x.id===c.id? {...x, id:e.target.value}: x))})
-                          ),
-                          React.createElement("div",{className:"sm:col-span-2"},
-                            React.createElement("div",{className:"text-xs text-slate-500"},"Name"),
-                            React.createElement("input",{className:"w-full border rounded-lg px-3 py-2", value:c.name, onChange:e=>setCategories(prev=>prev.map(x=> x.id===c.id? {...x, name:e.target.value}: x))})
                           ),
                           React.createElement("div",null,
                             React.createElement("div",{className:"text-xs text-slate-500"},"Price ($/each)"),
@@ -302,30 +302,19 @@
                             React.createElement("div",{className:"text-xs text-slate-500"},"Stock (each)"),
                             React.createElement("input",{type:"number", step:"1", min:"0", className:"w-full border rounded-lg px-3 py-2", value:c.stock ?? "", onChange:e=>setCategories(prev=>prev.map(x=> x.id===c.id? {...x, stock: e.target.value===""? null : Number(e.target.value)}: x))})
                           ),
-                          React.createElement("div",null,
-                            React.createElement("div",{className:"text-xs text-slate-500"},"Disabled"),
-                            React.createElement("select",{className:"w-full border rounded-lg px-3 py-2", value:String(!!c.disabled), onChange:e=>setCategories(prev=>prev.map(x=> x.id===c.id? {...x, disabled: e.target.value==="true"}: x))},
-                              React.createElement("option",{value:"false"},"No"),
-                              React.createElement("option",{value:"true"},"Yes")
-                            )
+                          React.createElement("div",{className:"sm:col-span-2 flex items-end justify-end"},
+                            React.createElement("button",{
+                              className:"pill " + (c.disabled ? "pill-danger" : "pill-muted"),
+                              onClick:()=> setCategories(prev=>prev.map(x=> x.id===c.id? {...x, disabled: !x.disabled}: x))
+                            }, c.disabled ? "Out of stock" : "In stock")
                           )
                         ),
                         React.createElement("div",{className:"mt-2"},
                           React.createElement("div",{className:"text-xs text-slate-500"},"Description"),
                           React.createElement("textarea",{rows:2, className:"w-full border rounded-lg px-3 py-2", value:c.description||"", onChange:e=>setCategories(prev=>prev.map(x=> x.id===c.id? {...x, description:e.target.value}: x))})
                         ),
-                        React.createElement("div",{className:"mt-2 flex items-center justify-between"},
-                          // Low-stock badge per row
-                          React.createElement("div",null,
-                            (c.stock!=null && !c.disabled) ? (
-                              Number(c.stock) <= Number(lowStockThreshold)
-                                ? React.createElement("span",{className:"badge badge-warn"}, "Low: ", String(c.stock))
-                                : React.createElement("span",{className:"badge badge-ok"}, "Stock: ", String(c.stock))
-                            ) : React.createElement("span",{className:"text-xs text-slate-400"}, "No stock set")
-                          ),
-                          React.createElement("div",null,
-                            React.createElement("button",{className:"px-3 py-2 rounded-lg bg-slate-900 text-white", onClick:()=>saveCategory(c)},"Save")
-                          )
+                        React.createElement("div",{className:"mt-2 flex justify-end"},
+                          React.createElement("button",{className:"px-3 py-2 rounded-lg bg-slate-900 text-white", onClick:()=>saveCategory(c)},"Save")
                         )
                       ))
                     )
