--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
     ></script>
 
     <style>
-      /* Better tap targets on mobile */
       button, input, select { font-size: 16px; }
-      /* Map height */
       #map { height: 320px; }
       @media (min-width: 640px) { #map { height: 420px; } }
     </style>
@@ -45,8 +43,7 @@
       const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imhzbm1ncGp6ZGplYmpvYmF5dWZxIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjA2OTEwNTksImV4cCI6MjA3NjI2NzA1OX0.BGJvJnREimmAmUZ4ltKwhWA4JBcTHN1T_GMIYE1m-4E";
       const SELLER_ID = "sledneck";
 
-      // Cheshire Lake (Hoosac Lake), MA approximate center
-      const DEFAULT_CENTER = [42.561, -73.159];
+      const DEFAULT_CENTER = [42.561, -73.159]; // Cheshire Lake approx center
       const DEFAULT_ZOOM = 14;
 
       const supa = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
@@ -54,10 +51,10 @@
       function normalizeIntInput(s){
         const n = Math.max(0, Math.floor(Number(String(s).replace(/[^0-9]/g,""))));
         return String(n);
-      }
+        }
 
       function App(){
-        const [status, setStatus] = useState({ is_open:false, left_lake:false, lake:"" });
+        const [status, setStatus] = useState({ is_open:false, lake:"" });
         const [categories, setCategories] = useState([]);
         const [cart, setCart] = useState({});
         const [buyerName, setBuyerName] = useState("");
@@ -65,29 +62,49 @@
         const [pin, setPin] = useState(null); // { lat, lng }
         const [confirm, setConfirm] = useState(null);
 
-        // Realtime + initial fetch
+        // Review form state
+        const [revName, setRevName] = useState("");
+        const [revStars, setRevStars] = useState(5);
+        const [revText, setRevText] = useState("");
+
+        // Initial fetch + realtime
         useEffect(()=>{
           async function fetchData(){
             const { data: st } = await supa.from("seller_status").select("*").eq("seller_id", SELLER_ID).maybeSingle();
-            if (st) setStatus(st);
-            const { data: cats } = await supa.from("categories").select("*").eq("seller_id", SELLER_ID).order("name");
-            if (cats) setCategories(cats);
+            if (st) setStatus({ is_open: !!st.is_open, lake: st.lake || "" });
+
+            const { data: cats } = await supa.from("categories").select("*").eq("seller_id", SELLER_ID);
+            if (cats) setCategories(sortCats(cats));
           }
           fetchData();
 
-          const ch1 = supa.channel("status-"+SELLER_ID)
-            .on("postgres_changes",{ event: "*", schema:"public", table:"seller_status", filter: `seller_id=eq.${SELLER_ID}`}, (payload)=>{
-              setStatus(payload.new || payload.old || {});
-            }).subscribe();
-          const ch2 = supa.channel("cats-"+SELLER_ID)
-            .on("postgres_changes",{ event: "*", schema:"public", table:"categories", filter: `seller_id=eq.${SELLER_ID}`}, ()=>{
-              supa.from("categories").select("*").eq("seller_id", SELLER_ID).order("name").then(({data})=> { if (data) setCategories(data); });
+          const chStatus = supa.channel("status-"+SELLER_ID)
+            .on("postgres_changes",{ event:"*", schema:"public", table:"seller_status", filter:`seller_id=eq.${SELLER_ID}` }, payload=>{
+              const st = payload.new || payload.old || {};
+              setStatus({ is_open: !!st.is_open, lake: st.lake || "" });
             }).subscribe();
 
-          return ()=>{ supa.removeChannel(ch1); supa.removeChannel(ch2); }
+          const chCats = supa.channel("cats-"+SELLER_ID)
+            .on("postgres_changes",{ event:"*", schema:"public", table:"categories", filter:`seller_id=eq.${SELLER_ID}` }, ()=>{
+              supa.from("categories").select("*").eq("seller_id", SELLER_ID).then(({data})=>{
+                if (data) setCategories(sortCats(data));
+              });
+            }).subscribe();
+
+          return ()=>{ supa.removeChannel(chStatus); supa.removeChannel(chCats); }
         }, []);
 
-        const canOrderHere = status.is_open && !status.left_lake;
+        function sortCats(list){
+          // Put 'small' first, then 'placeholder', then medium/large/goldfish, then others alpha
+          const order = { small:1, placeholder:2, medium:3, large:4, goldfish:5 };
+          return [...list].sort((a,b)=>{
+            const sa = order[a.id] ?? (100 + a.id.localeCompare(b.id));
+            const sb = order[b.id] ?? (100 + b.id.localeCompare(a.id));
+            return sa - sb;
+          });
+        }
+
+        const canOrderHere = status.is_open;
 
         function setCartQty(id, qty){
           setCart(prev => {
@@ -132,21 +149,42 @@
           setCart({}); setBuyerNotes(""); setConfirm(order);
         }
 
+        async function submitReview(){
+          if (!buyerName.trim() && !revName.trim()){
+            alert("Please enter a name for your review.");
+            return;
+          }
+          const payload = {
+            seller_id: SELLER_ID,
+            buyer_name: (revName || buyerName || "Anonymous").trim(),
+            stars: Number(revStars)||5,
+            text: (revText||"").trim()
+          };
+          const { error } = await supa.from("reviews").insert(payload);
+          if (error){ alert("Review failed: " + error.message); return; }
+          setRevText("");
+          alert("Thanks! Your review was sent to the seller.");
+        }
+
         return (
           React.createElement("div",{className:"min-h-screen p-4"},
             React.createElement("div",{className:"max-w-3xl mx-auto space-y-4"},
+
+              // Header
               React.createElement("div",{className:"rounded-2xl shadow p-5 bg-white"},
                 React.createElement("h1",{className:"text-xl font-semibold mb-1"},"Sledneck Shiners - Buyer"),
                 React.createElement("div",{className:"text-sm text-slate-600"},
                   "Lake: ", status.lake || "—", " · Seller is ",
-                  (status.is_open && !status.left_lake) ? "OPEN" : "CLOSED"
+                  canOrderHere ? "OPEN" : "CLOSED"
                 )
               ),
 
+              // Location
               React.createElement(LocationSection, {
                 pin, setPin, defaultCenter: DEFAULT_CENTER, defaultZoom: DEFAULT_ZOOM
               }),
 
+              // Build order
               React.createElement("div",{className:"rounded-2xl shadow p-5 bg-white"},
                 React.createElement("h2",{className:"text-lg font-semibold mb-3"},"Build Your Order"),
                 categories.length===0
@@ -155,7 +193,7 @@
                       categories.map(c=> React.createElement("div",{key:c.id, className:"border rounded-2xl p-3 "+(c.disabled?"opacity-50":"")},
                         React.createElement("div",{className:"flex items-center justify-between"},
                           React.createElement("div",null,
-                            React.createElement("div",{className:"font-medium"}, c.name),
+                            React.createElement("div",{className:"font-medium"}, c.name || c.id),
                             React.createElement("div",{className:"text-xs text-slate-500"}, "Price: $", (c.price||0).toFixed(2), " each")
                           ),
                           React.createElement("input",{
@@ -163,35 +201,65 @@
                             className:"w-20 border rounded-lg px-3 py-2",
                             value:String(cart[c.id]||0),
                             onChange:(e)=> setCartQty(c.id, Number(normalizeIntInput(e.target.value))),
-                            disabled:!(status.is_open && !status.left_lake) || c.disabled
+                            disabled:!canOrderHere || c.disabled
                           })
                         ),
                         c.description ? React.createElement("div",{className:"text-xs text-slate-600 mt-2"}, c.description) : null
                       ))
-                    )
-              ),
+                    ),
 
-              React.createElement("div",{className:"rounded-2xl shadow p-5 bg-white"},
-                React.createElement("div",{className:"grid sm:grid-cols-2 gap-3"},
+                // Buyer info & submit
+                React.createElement("div",{className:"grid sm:grid-cols-2 gap-3 mt-4"},
                   React.createElement("div",null,
                     React.createElement("label",{className:"text-sm text-slate-600"},"Your Name (required)"),
                     React.createElement("input",{className:"w-full border rounded-xl px-3 py-2 mt-1", value:buyerName, onChange:e=>setBuyerName(e.target.value), placeholder:"First name or nickname"})
                   ),
                   React.createElement("div",null,
                     React.createElement("label",{className:"text-sm text-slate-600"},"Notes (optional)"),
-                    React.createElement("input",{className:"w-full border rounded-xl px-3 py-2 mt-1", value:buyerNotes, onChange:e=>setBuyerNotes(e.target.value), placeholder:"Bucket size, special spot, etc."})
+                    React.createElement("input",{className:"w-full border rounded-xl px-3 py-2 mt-1", value:buyerNotes, onChange:e=>setBuyerNotes(e.target.value), placeholder:""})
                   )
                 ),
+
                 React.createElement("div",{className:"mt-3 p-3 rounded-xl bg-slate-100 flex items-center justify-between"},
                   React.createElement("div",{className:"text-sm"},"Cart total estimate"),
                   React.createElement("div",{className:"text-lg font-semibold"},"$", cartTotal.toFixed(2))
                 ),
-                React.createElement("div",{className:"flex items-center justify-between mt-4"},
-                  React.createElement("div",{className:"text-sm text-slate-600"},"Status: ", (status.is_open && !status.left_lake) ? "Open here" : "Closed here"),
-                  React.createElement("button",{onClick:placeOrder, className:"px-4 py-2 rounded-xl bg-slate-900 text-white", disabled:!(status.is_open && !status.left_lake)},"Place Order")
+                React.createElement("div",{className:"flex flex-col sm:flex-row sm:items-center sm:justify-between gap-2 mt-4"},
+                  React.createElement("div",{className:"text-sm text-slate-600"},"Status: ", canOrderHere ? "Open here" : "Closed here"),
+                  React.createElement("div",{className:"flex items-center gap-3"},
+                    React.createElement("div",{className:"text-sm text-slate-600"},"Cash or card accepted at delivery"),
+                    React.createElement("button",{onClick:placeOrder, className:"px-4 py-2 rounded-xl bg-slate-900 text-white", disabled:!canOrderHere},"Place Order")
+                  )
                 )
               ),
 
+              // Private review submit (insert-only)
+              React.createElement("div",{className:"rounded-2xl shadow p-5 bg-white"},
+                React.createElement("h2",{className:"text-lg font-semibold mb-3"},"Leave a Review (private to seller)"),
+                React.createElement("div",{className:"grid sm:grid-cols-3 gap-3"},
+                  React.createElement("div",null,
+                    React.createElement("label",{className:"text-sm text-slate-600"},"Name"),
+                    React.createElement("input",{className:"w-full border rounded-xl px-3 py-2 mt-1", value:revName, onChange:e=>setRevName(e.target.value), placeholder: buyerName || "Your name"})
+                  ),
+                  React.createElement("div",null,
+                    React.createElement("label",{className:"text-sm text-slate-600"},"Stars"),
+                    React.createElement("select",{className:"w-full border rounded-xl px-3 py-2 mt-1", value:revStars, onChange:e=>setRevStars(e.target.value)},
+                      [1,2,3,4,5].map(s=> React.createElement("option",{key:s, value:s}, s))
+                    )
+                  ),
+                  React.createElement("div",{className:"sm:col-span-1"})
+                ),
+                React.createElement("div",{className:"mt-3"},
+                  React.createElement("label",{className:"text-sm text-slate-600"},"Review"),
+                  React.createElement("textarea",{rows:3, className:"w-full border rounded-xl px-3 py-2 mt-1", value:revText, onChange:e=>setRevText(e.target.value), placeholder:"How was your experience?"})
+                ),
+                React.createElement("div",{className:"mt-3 flex justify-end"},
+                  React.createElement("button",{className:"px-4 py-2 rounded-xl bg-slate-900 text-white", onClick:submitReview},"Submit Review")
+                ),
+                React.createElement("p",{className:"text-xs text-slate-500 mt-2"},"Reviews are not public in this version; only the seller can read them.")
+              ),
+
+              // Confirmation
               confirm && React.createElement("div",{className:"rounded-2xl shadow p-5 bg-white"},
                 React.createElement("h2",{className:"text-lg font-semibold mb-1"},"Order Received"),
                 React.createElement("div",{className:"text-sm"},"Thanks, ", confirm.buyer_name, "! Your order ", confirm.id, " has been received."),
@@ -254,7 +322,6 @@
           // expose helper for GPS button
           mapRef.current._placeOrMoveMarker = placeOrMoveMarker;
 
-          // helper rounding
           function round6(x){ return Math.round(x * 1e6) / 1e6; }
         }, [defaultCenter, defaultZoom, setPin]);
 
