--- a/seller.html
+++ b/seller.html
@@ -33,9 +33,10 @@
 
       const supa = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-      // Friendly label for buyer if we set name = id
-      function labelFromId(id){
-        return id.replace(/_/g," ").replace(/\b\w/g, c=>c.toUpperCase());
+      // Friendly display name for buyer (never show "placeholder")
+      function displayCatName(c){
+        if (c.id === 'placeholder') return 'Out of Stock';
+        return c.name || c.id.replace(/_/g,' ').replace(/\b\w/g, s=>s.toUpperCase());
       }
 
       function App(){
@@ -46,7 +47,7 @@
         const [authErr, setAuthErr] = useState("");
 
         // Data
-        const [status, setStatus] = useState({ lake:"", is_open:false }); // simplified (no left_lake)
+        const [status, setStatus] = useState({ lake:"", is_open:false }); // simplified open/closed
         const [categories, setCategories] = useState([]);
         const [orders, setOrders] = useState([]);
         const [lowStockThreshold, setLowStockThreshold] = useState(10);
@@ -68,7 +69,7 @@
               .on("postgres_changes",{event:"*",schema:"public",table:"seller_status",filter:`seller_id=eq.${SELLER_ID}`},
                 payload => {
                   const st = payload.new || payload.old || {};
-                  setStatus({ lake: st.lake, is_open: !!st.is_open }); // ignore left_lake if present
+                  setStatus({ lake: st.lake, is_open: !!st.is_open });
                 })
               .subscribe();
 
@@ -101,11 +102,11 @@
         async function loadCategories(){
           const { data } = await supa.from("categories").select("*").eq("seller_id", SELLER_ID);
           const list = (data || []);
-          // custom order: small, placeholder, medium, large, goldfish, rest (alpha)
-          const orderMap = { small: 1, placeholder: 2, medium:3, large:4, goldfish:5 };
+          // Sort: Out of Stock first, then small/medium/large/goldfish, then others A→Z
+          const orderMap = { placeholder:1, small:2, medium:3, large:4, goldfish:5 };
           list.sort((a,b)=>{
-            const sa = orderMap[a.id] || 100 + a.id.localeCompare(b.id);
-            const sb = orderMap[b.id] || 100 + b.id.localeCompare(a.id);
+            const sa = orderMap[a.id] ?? (100 + a.id.localeCompare(b.id));
+            const sb = orderMap[b.id] ?? (100 + b.id.localeCompare(a.id));
             return sa - sb;
           });
           setCategories(list);
@@ -117,17 +118,18 @@
 
         // Saves
         async function saveStatus(patch={}){
-          const body = { seller_id: SELLER_ID, ...status, ...patch, left_lake: false }; // always false for simplicity
+          const body = { seller_id: SELLER_ID, ...status, ...patch };
           const { error } = await supa.from("seller_status").upsert(body).eq("seller_id", SELLER_ID);
           if (error) alert("Status update failed: " + error.message);
         }
 
-        // Only ID kept in UI. We still write name = ID so buyer sees a nice label.
+        // Only ID editable; keep name synced (placeholder → "Out of Stock")
         async function saveCategory(cat){
+          const friendly = displayCatName(cat);
           const payload = {
             id: cat.id.trim(),
             seller_id: SELLER_ID,
-            name: labelFromId(cat.id.trim()), // keep name synced for buyer UI
+            name: friendly, // keep buyer label nice
             unit: "each",
             price: Number(cat.price||0),
             description: cat.description||"",
@@ -172,7 +174,12 @@
         // Orders
         async function setOrderStatus(id, status){
           const { error } = await supa.from("orders").update({ status }).eq("seller_id", SELLER_ID).eq("id", id);
-          if (error) alert("Update failed: " + error.message);
+          if (error) {
+            alert("Update failed: " + error.message);
+            await loadCategories();
+            return;
+          }
+          await loadCategories(); // reflect stock changes after Accept/Cancel
         }
 
         // CSV export
@@ -270,7 +277,7 @@
                   lowStockCats.length>0
                     ? React.createElement("div",{className:"p-3 rounded-xl border bg-amber-50 text-amber-900"},
                         `${lowStockCats.length} low-stock: ` +
-                        lowStockCats.map(c=> c.id + (c.stock!=null?` (${c.stock})`:"")).join(", ")
+                        lowStockCats.map(c=> displayCatName(c) + (c.stock!=null?` (${c.stock})`:"")).join(", ")
                       )
                     : React.createElement("div",{className:"p-3 rounded-xl border bg-emerald-50 text-emerald-900"},"All good — no low stock.")
                 )
@@ -292,7 +299,8 @@
                         React.createElement("div",{className:"grid sm:grid-cols-6 gap-2 items-center"},
                           React.createElement("div",{className:"sm:col-span-2"},
                             React.createElement("div",{className:"text-xs text-slate-500"},"ID"),
-                            React.createElement("input",{className:"w-full border rounded-lg px-3 py-2", value:c.id, onChange:e=>setCategories(prev=>prev.map(x=> x.id===c.id? {...x, id:e.target.value}: x))})
+                            React.createElement("input",{className:"w-full border rounded-lg px-3 py-2", value:c.id, onChange:e=>setCategories(prev=>prev.map(x=> x.id===c.id? {...x, id:e.target.value}: x))}),
+                            React.createElement("div",{className:"text-xs text-slate-500 mt-1"},"Buyer label: ", displayCatName(c))
                           ),
                           React.createElement("div",null,
                             React.createElement("div",{className:"text-xs text-slate-500"},"Price ($/each)"),
