--- a/index.html
+++ b/index.html
@@ -48,10 +48,16 @@
 
       const supa = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
+      // Display name helper: never show "placeholder"
+      function displayCatName(c){
+        if (c.id === 'placeholder') return 'Out of Stock';
+        return c.name || c.id.replace(/_/g,' ').replace(/\b\w/g, s=>s.toUpperCase());
+      }
+
       function normalizeIntInput(s){
         const n = Math.max(0, Math.floor(Number(String(s).replace(/[^0-9]/g,""))));
         return String(n);
-        }
+      }
 
       function App(){
         const [status, setStatus] = useState({ is_open:false, lake:"" });
@@ -62,7 +68,7 @@
         const [pin, setPin] = useState(null); // { lat, lng }
         const [confirm, setConfirm] = useState(null);
 
-        // Review form state
+        // Review form state (private to seller)
         const [revName, setRevName] = useState("");
         const [revStars, setRevStars] = useState(5);
         const [revText, setRevText] = useState("");
@@ -95,8 +101,8 @@
         }, []);
 
         function sortCats(list){
-          // Put 'small' first, then 'placeholder', then medium/large/goldfish, then others alpha
-          const order = { small:1, placeholder:2, medium:3, large:4, goldfish:5 };
+          // Out of Stock first, then Small/Medium/Large/Goldfish, then others A→Z
+          const order = { placeholder:1, small:2, medium:3, large:4, goldfish:5 };
           return [...list].sort((a,b)=>{
             const sa = order[a.id] ?? (100 + a.id.localeCompare(b.id));
             const sb = order[b.id] ?? (100 + b.id.localeCompare(a.id));
@@ -193,7 +199,7 @@
                       categories.map(c=> React.createElement("div",{key:c.id, className:"border rounded-2xl p-3 "+(c.disabled?"opacity-50":"")},
                         React.createElement("div",{className:"flex items-center justify-between"},
                           React.createElement("div",null,
-                            React.createElement("div",{className:"font-medium"}, c.name || c.id),
+                            React.createElement("div",{className:"font-medium"}, displayCatName(c)),
                             React.createElement("div",{className:"text-xs text-slate-500"}, "Price: $", (c.price||0).toFixed(2), " each")
                           ),
                           React.createElement("input",{
